# polymer-analysis

./: .gitignore  README.md  developers.md  manage.py  requirements.txt  todo.txt
expert_system/: forms.py  models.py  urls.py  views.py
expert_system/calculation/: CalculationResult.py
expert_system/fuzzy_logic/: ExpertSystem.py  FuzzyLogic.py
expert_system/migrations/: 0001_initial.py
expert_system/particle_model/: pyproject.toml
expert_system/particle_model/particlenet/: particle_net.py
polymer_analyzer/: asgi.py  settings.py  urls.py  wsgi.py
templates/: history.html  index.html
