[tool.poetry]
name = "particlenet"
version = "0.1.0"
description = ""
authors = ["Rostislav Grigorev <grigorjew.rostislaw@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.11.0"
torchvision = "^0.12.0"
pandas = "^1.4.1"
PyYAML = "^6.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
